--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+*{
+    font-family: 'Roboto',sans-serif;
+}
 section{
     padding-top: 50px;
     padding-bottom: 50px;
